--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,7 @@
 }
 
 html {
+    margin: 0;
     font-size: 62.5%;
     box-sizing: border-box;
     font-family: 'Krub', sans-serif;
@@ -26,6 +27,7 @@ body {
 }
 
 section {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,6 +48,30 @@ section {
         align-items: center;
         justify-content: center;
     }
+    
+}
+
+@media (max-width: 480px){
+    .contenido{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 3rem;
+    }
+    
+    .formulario{
+        padding: auto;
+    }
+
+    section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
     
 }
 
@@ -93,6 +119,8 @@ form {
     width: 100%;
     height: 100%;
 }
+/*Alerta*/
+
 
 .formulario label {
     text-transform: uppercase;
@@ -137,6 +165,7 @@ form {
     text-transform: uppercase;
     background-color: var(--color-boton);
     color: var(--primario);
+    cursor: pointer;
 }
 
 .boton .enviar:hover {
