--- a/css/login.css
+++ b/css/login.css
@@ -8,10 +8,9 @@
 }
 
 html {
-    margin: 0;
+    margin: auto;
     font-size: 62.5%;
     box-sizing: border-box;
-    font-family: 'Krub', sans-serif;
 }
 
 *,
@@ -38,7 +37,7 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1rem;
-    margin:13rem auto;
+    margin:5% auto;
 }
 
 @media (max-width: 768px){
@@ -113,6 +112,7 @@ form {
     font-size: 3rem;
     padding-top: .5rem;
     padding-bottom: 0;
+    font-family: 'Krub', sans-serif 
 }
 
 .formulario hr{
@@ -124,9 +124,10 @@ form {
 
 .formulario label {
     text-transform: uppercase;
-    font-size: 2rem;
-    padding: .4rem;
+    font-size: 1.7rem;
+    padding: .3rem;
     color: var(--primario);
+    font-family:'Krub', sans-serif ;
 }
 
 .formulario .campo {
