--- a/css/normalize.css
+++ b/css/normalize.css
@@ -195,9 +195,7 @@
   button,
   [type="button"],
   [type="reset"],
-  [type="submit"] {
-    -webkit-appearance: button;
-  }
+  [type="submit"]
   
   /**
    * Remove the inner border and padding in Firefox.
@@ -287,8 +285,7 @@
    * 2. Correct the outline style in Safari.
    */
   
-  [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+  [type="search"] { /* 1 */
     outline-offset: -2px; /* 2 */
   }
   
