--- a/css/menu-principal.css
+++ b/css/menu-principal.css
@@ -1,15 +1,15 @@
-:root{
+:root {
     --primario: #ffffff;
     --secundario: #852b9c;
     --hover: #0d97b6;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family:'Krub', sans-serif;
+    font-family: 'Krub', sans-serif;
 }
 
 html {
@@ -24,20 +24,20 @@ html {
     box-sizing: inherit;
 }
 
-body{
+body {
     font-size: 16px;
     margin-left: 8rem;
     margin-top: 8rem;
     transition: margin-left 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
-main{
+main {
     padding: 2rem;
 }
 
-header{
+header {
     width: 100%;
-    height: 80px;
+    height: 5rem;
     background: #f5f5f5;
     display: flex;
     align-items: center;
@@ -46,7 +46,7 @@ header{
     z-index: 200;
 }
 
-.icon__menu{
+.icon__menu {
     width: 5rem;
     height: 100%;
     display: flex;
@@ -55,13 +55,20 @@ header{
     transform: translateX(1rem);
 }
 
-.icon__menu i{
+.icon__menu i {
     font-size: 2rem;
     cursor: pointer;
     position: absolute;
 }
 
-.menu__side{
+.icon__menu h1 {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(12rem);
+}
+
+.menu__side {
     width: 8rem;
     height: 100%;
     background: var(--secundario);
@@ -78,36 +85,36 @@ header{
 }
 
 /*Ocultar scroll para chrome, safari y opera*/
-.menu__side::-webkit-scrollbar{
+.menu__side::-webkit-scrollbar {
     display: none;
 }
 
 /*Ocultar scroll para IE, Edge y Firefox*/
-.menu__side{
+.menu__side {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
 
-.name__page{
-    padding: 2rem 3rem;
+.name__page {
+    padding: 1rem 3rem;
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     margin-top: 1rem;
 }
 
-.name__page img{
+.name__page img {
     width: 3rem;
     margin-right: 2rem;
 }
 
-.options__menu{
-    padding: 2rem 3rem;
+.options__menu {
+    padding: 2.5rem 3rem;
     position: absolute;
-    top: 8rem;
+    top: 10rem;
 }
 
-.options__menu a{
+.options__menu a {
     color: var(--primario);
     cursor: default;
     display: block;
@@ -116,34 +123,34 @@ header{
     text-decoration: none;
 }
 
-.options__menu a:hover{
+.options__menu a:hover {
     color: var(--hover);
     text-transform: uppercase;
 }
 
-.options__menu .option{
+.options__menu .option {
     padding: 2rem 0;
     display: flex;
     align-items: center;
     position: relative;
 }
 
-.options__menu .option i{
+.options__menu .option i {
     width: 2rem;
     margin-right: 2rem;
     cursor: pointer;
 }
 
-.options__menu .option h4{
+.options__menu .option h4 {
     font-weight: 300;
     cursor: pointer;
 }
 
-a.selected{
+a.selected {
     color: #fff;
 }
 
-.selected:before{
+.selected:before {
     content: '';
     width: .3rem;
     height: 80%;
@@ -156,21 +163,21 @@ a.selected{
 
 /*Clases para usar en JavaScript*/
 
-.body_move{
+.body_move {
     margin-left: 25rem;
 }
 
-.menu__side_move{
+.menu__side_move {
     width: 25rem;
 }
 
 
-@media screen and (max-width: 760px){
-    .body_move{
+@media screen and (max-width: 760px) {
+    .body_move {
         margin-left: 0px;
     }
 
-    .menu__side_move{
+    .menu__side_move {
         width: 80px;
         left: -80px;
     }
