--- a/css/principal.css
+++ b/css/principal.css
@@ -31,7 +31,6 @@ main .resumen {
 }
 
 main .cartaR {
-    text-align: -webkit-center;
     padding: 3rem;
     max-width: 50rem;
     max-height: 20rem;
@@ -48,20 +47,16 @@ main .cartaR:hover {
 }
 
 
-@media (min-width: 768px) {
-    main .cartaR {
-        flex-direction: column;
-    }
-}
+
 
 main .contenedor {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(3, 1fr);
-    align-items: end;
+    justify-content: space-between;
+    align-items: center;
     column-gap: 1rem;
     margin-top: 2rem;
 }
-
 
 main .total {
     display: flex;
@@ -105,15 +100,18 @@ main .carta {
     box-shadow: -1px -1px 20px -1px rgba(13, 13, 13, 0.51);
 }
 .carta:first-child:hover {
-    background-color: yellow;
+    background-color: var(--secundario);
+    color: var(--primario);
   }
 
 .carta:nth-child(2):hover {
-    background-color: green;
+    background-color: var(--secundario);
+    color: var(--primario);
   }
 
 .carta:nth-child(3):hover{
-    background-color: red;
+    background-color: var(--secundario);
+    color: var(--primario);
 }
 
 main .carta .info a {
